--- a/Scrubbed_Unity/index.html
+++ b/Scrubbed_Unity/index.html
@@ -56,16 +56,17 @@
                   <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
                   <a href="#benefits" class="nav-link p-0">Benefits</a> </li>
                   <li
-                    class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#whyWe" class="nav-link p-0">Careers</a> </li>
+                    class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#careers" class="nav-link p-0">Careers</a> </li>
                     <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                    <a href="#benefits" class="nav-link p-0">Numbers</a> </li>
+                    <a href="#numbers" class="nav-link p-0">Numbers</a> </li>
                     <li
-                      class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#ourCases" class="nav-link p-0">Awards</a> </li>
+                      class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#awards" class="nav-link p-0">Awards</a> </li>
+                      <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
+                      <a href="#events" class="nav-link p-0">Events</a> </li>
                       <li
-                        class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#team" class="nav-link p-0">Events</a> </li>
-                        <li class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg">
-                        <a href="#testimonials" class="nav-link p-0">Contact</a>                          </li>
-                </ul> <a class="navbar-brand u-header__log">
+                        class="nav-item g-mx-15--lg g-mb-7 g-mb-0--lg"> <a href="#contact" class="nav-link p-0">Contact</a> </li>
+                </ul>
+                <a class="navbar-brand u-header__log">
                   <img src="./assets/custom/assets-case/img/code-bro.jpg" alt="Best places to work 2018 logo" style="height: 25px">
                 </a> </div>
               <!-- End Navigation -->
@@ -232,8 +233,8 @@
                   <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                     <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                       <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/"
-                          style="color:red">401k</a>, without the requirement of an
-                        employee contribution </p>
+                          class="g-color-primary">401k</a>, without the requirement
+                        of an employee contribution </p>
                     </li>
                     <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                       <p class="list_elem"> Annual lump-sum profit sharing of 10%, deposited at the end
@@ -592,147 +593,138 @@
       </section>
       <!-- End Awards Section -->
       <!-- Events Section Content -->
-      <section id="latestPosts" class="g-theme-bg-gray-light-v1 g-py-100">
-        <div class="card-deck">
+      <section id="events" class="g-theme-bg-gray-light-v1 g-py-50">
+        <div class="container text-center g-max-width-750 g-mb-20 g-pt-10 g-pb-10">
+          <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
+            <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Events</h2> </div>
+        </div>
+        <div class="card-deck g-mx-20 g-my-10">
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2017holiday_min.jpg"
               alt="2017 Holiday Party">
             <div class="card-body">
-              <h5 class="card-title">2017 Holiday Party</h5>
+              <h4 class="card-title g-color-primary"><a  class = "g-color-primary" href="https://photos.app.goo.gl/2U6zL2tz3Lou17ca2" target="_blank" rel="noopener">2017 Holiday Party</a></h4>
               <p class="card-text">Employees and loved ones enjoyed a night of bocce, bowling, food, and
                 drinks at Pinstripes in Georgetown.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2017reinvent_min.jpg"
               alt="2017 AWS re:Invent">
             <div class="card-body">
-              <h5 class="card-title">2017 AWS re:Invent</h5>
+              <h4 class="card-title g-color-primary"><a class = "g-color-primary" href="https://photos.app.goo.gl/wg2bTokQI4RkM3WA3" target="_blank" rel="noopener">2017 AWS re:Invent</a></h4>
               <p class="card-text">This year we had a record number of employees go to AWS re:Invent in
                 Las Vegas!</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
         </div>
-        <div class="card-deck">
+        <div class="card-deck g-mx-20 g-my-10">
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2017picnic_min.jpg"
               alt="2017 Family Picnic">
             <div class="card-body">
-              <h5 class="card-title">2017 Family Picnic</h5>
+              <h4 class="card-title"><a class = "g-color-primary" href="https://photos.app.goo.gl/8RefFAJ1i7EY6yqT2" target="_blank" rel="noopener">2017 Family Picnic</a></h4>
               <p class="card-text">We always have a good time getting together with each other and our
                 families. This year we had ponies, a bounce house, face painting,
                 and a whole lot of fun! Thanks to everyone for coming out!</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2017csrc_min.jpg" alt="Recruiting @ VT CSRC Career Fair">
             <div class="card-body">
-              <h5 class="card-title">Recruiting @ VT CSRC Career Fair</h5>
+              <h4 class="card-title">
+                <a href="https://photos.app.goo.gl/mckEE6nkiRxVkaGh1" class = "g-color-primary" target="_blank" rel="noopener">Recruiting @ VT CSRC Career Fair</a></h4>
               <p class="card-text">Several employees attended the Virginia Tech Computer Science Resources
                 Consortium Career Fair in search of another group of interns for
                 the Summer of 2018!</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
         </div>
-        <div class="card-deck">
+        <div class="card-deck g-mx-20 g-my-10">
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2017-summer-internship-min.jpg"
               alt="2017 Summer Internship">
             <div class="card-body">
-              <h5 class="card-title">2017 Summer Internship</h5>
+              <h4 class="card-title"><a class = "g-color-primary" href="https://goo.gl/photos/G1P76LwSpCGRwUqb6" target="_blank" rel="noopener">2017 Summer Internship</a></h4>
               <p class="card-text">Big changes for Case Consulting in 2017 as we moved to new offices
                 and embarked on our inaugural Summer Internship program!</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2017bptw-min.jpg" alt="2017 Best Places to Work">
             <div class="card-body">
-              <h5 class="card-title">2017 Best Places to Work</h5>
+              <h4 class="card-title"><a class = "g-color-primary" href="https://goo.gl/photos/6YXNHMP7mbY6MJid9" target="_blank" rel="noopener">2017 Best Places to Work</a></h4>
               <p class="card-text">Several of our employees attended the Washington Business Journal's
                 2017 Best Places to Work ceremony in Washington D.C. </p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
         </div>
-        <div class="card-deck">
+        <div class="card-deck g-mx-20 g-my-10">
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/game-night-min.jpg"
               alt="2017 Game Night">
             <div class="card-body">
-              <h5 class="card-title">2017 Game Night</h5>
+              <h4 class="card-title"><a class= "g-color-primary" href="https://photos.app.goo.gl/xsfrqKKkmplU1D133" target="_blank" rel="noopener">Game Nights</a></h4>
               <p class="card-text">Employees always have a good time at our monthly game nights in our
                 wonderful office space.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2017serverless-min.jpg"
               alt="2017 Serverless Conference">
             <div class="card-body">
-              <h5 class="card-title">2017 Serverless Conference</h5>
+              <h4 class="card-title"><a class= "g-color-primary" href="https://goo.gl/photos/4T3HKxNofJPSDrqt8" target="_blank" rel="noopener">2017 Serverless Conf</a></h4>
               <p class="card-text">Two of our employees learned a lot while taking in some of the sights
                 at Serverless Conf in Austin, Texas!</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
         </div>
-        <div class="card-deck">
+        <div class="card-deck g-mx-20 g-my-10">
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/case-holiday-party-min.jpg"
               alt="2016 Holiday Party">
             <div class="card-body">
-              <h5 class="card-title">2016 Holiday Party</h5>
+              <h4 class="card-title"> <a class= "g-color-primary" href="https://goo.gl/photos/BvT9SvVD4zVXMSw5A" target="_blank" rel="noopener">2016 Holiday Party</a></h4>
               <p class="card-text">Employees and their loved ones had a great time at our annual holiday
                 party. This year the party was held at Stone Tower Winery in Leesburg
                 and featured an evening of giving, food, poker, and fun.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/case-family-picnic-min.jpg"
               alt="2016 Family Picnic">
             <div class="card-body">
-              <h5 class="card-title">2016 Family Picnic</h5>
+              <h4 class="card-title"><a class = "g-color-primary" href="https://goo.gl/photos/XvmL1Vp7FEAdjzYL6" target="_blank" rel="noopener">2016 Family Picnic</a></h4>
               <p class="card-text">Our annual Summer picnic is always a blast for employees and their
                 families and this year was no different. The kids (and some adults)
                 enjoyed the inflatable obstacle course and face painting.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
         </div>
-        <div class="card-deck">
+        <div class="card-deck g-mx-20 g-my-10">
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/aws-trip-min.jpg" alt="re:Invent 2016">
             <div class="card-body">
-              <h5 class="card-title">re:Invent 2016</h5>
+              <h4 class="card-title"><a class="g-color-primary" href="https://goo.gl/photos/vfdM1cf6bihNDoNcA" target="_blank" rel="noopener">re:Invent 2016</a></h4>
               <p class="card-text">Case Consulting was well represented at AWS re:Invent this year. Employees
                 enjoyed all of the talks and after-hours events and can't wait to
                 go back next year.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/rogue_one-min.jpg" alt="Rogue One: A Star Wars Movie">
             <div class="card-body">
-              <h5 class="card-title">Rogue One: A Star Wars Movie</h5>
+              <h4 class="card-title"><a class="g-color-primary" href="https://goo.gl/photos/qNT8KHuR7HTLq3tK6" target="_blank" rel="noopener">Rogue One: A Star Wars Movie</a></h4>
               <p class="card-text">The force is strong with us as we watched Rogue One at the Alamo Drafthouse.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
         </div>
         <!-- Row -->
-        <div class="card-deck">
+        <div class="card-deck g-mx-20 g-my-10">
           <!-- Item -->
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/2015-holiday-party-min.jpg"
               alt="2015 Holiday Party">
             <div class="card-body">
-              <h5 class="card-title">2015 Holiday Party</h5>
+              <h4 class="card-title"><a class="g-color-primary" href="https://goo.gl/photos/AE3Jadpp3fcPvF4o9" target="_blank" rel="noopener">2015 Holiday Party</a></h4>
               <p class="card-text">Employees and their loved ones enjoyed a night out at Salamander Resort
                 and Spa to celebrate the holiday season.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <div class="card"> <img class="card-img-top" src="./assets/custom/img/starwars-trip-min.jpg"
               alt="Star Wars: The Force Awakens">
             <div class="card-body">
-              <h5 class="card-title">Star Wars: The Force Awakens</h5>
+              <h4 class="card-title"><a class="g-color-primary" href="https://goo.gl/photos/fkL6C2WmdvT9mFpg9" target="_blank" rel="noopener">Star Wars: The Force Awakens</a></h4>
               <p class="card-text">Several employees viewed the latest Star Wars movie at the Udvar Hazy
                 IMAX theater.</p>
             </div>
-            <div class="card-footer"> <small class="text-muted">Last updated 3 mins ago</small> </div>
           </div>
           <!-- Item End -->
         </div>
@@ -748,34 +740,49 @@
                 <div class="col-md-6 col-lg-12 g-mb-60 g-mb-0--md g-mb-60--lg">
                   <div class="u-heading-v2-2--bottom g-brd-primary g-mb-30">
                     <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md g-color-white mb-0">Get in touch</h2> </div>
-                  <p class="g-color-gray-light-v4 mb-0">In eu commodo est. Sed bibendum a metus ac sollicitudin. Curabitur
-                    elementum placerat elit vel accumsan.</p>
+                  <p class="g-color-gray-light-v4 mb-0">Case Consulting has an established reputation and level of trust
+                    with the client, so contact us to discuss how we can continue
+                    to build a productive relationship and deliver impeccable results
+                    for our clients.</p>
                 </div>
                 <div class="col-md-6 col-lg-12 d-md-flex d-lg-block align-self-center">
                 <address class="text-uppercase g-font-size-12 mb-0">
                     <div class="g-pos-rel g-pl-35 g-mb-25">
                       <i class="fa fa-map-marker g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary"></i>
                       <span class="g-color-white-opacity-0_3">Address:</span>
-                      <strong>In sed lectus tincidunt</strong>
+                      <strong>18425 RUSTLING WOODS COURT LEESBURG, VA 20175</strong>
                     </div>
 
                     <div class="g-pos-rel g-pl-35 g-mb-25">
                       <i class="fa fa-phone g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary"></i>
                       <span class="g-color-white-opacity-0_3">Phone Number:</span>
-                      <strong>+48 555 2566 112 </strong>
+                      <strong>703-728-0294 </strong>
                     </div>
 
                     <div class="g-pos-rel g-pl-35 g-mb-25">
                       <i class="fa fa-envelope g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary"></i>
                       <span class="g-color-white-opacity-0_3">Email:</span>
-                      <a class="g-color-white" href="mailto:marketing@unify.com"><strong>marketing@unify.com</strong></a>
+                      <a class="g-color-white" href="mailto:INFO@CONSULTWITHCASE.COM"><strong>INFO@CONSULTWITHCASE.COM</strong></a>
+                    </div>
+
+                    <div class="g-pos-rel g-pl-35 g-mb-25">
+                      <i class="fab fa-facebook-f red-icon g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary"></i>
+                      <span class="g-color-white-opacity-0_3">Toll free:</span>
+                      <strong>CONSULT WITH CASE</strong>
+                    </div>
+
+                    <div class="g-pos-rel g-pl-35 g-mb-25">
+                      <i class="fab fa-twitter g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary"></i>
+                      <span class="g-color-white-opacity-0_3">Toll free:</span>
+                      <strong>@CONSULTWITHCASE</strong>
                     </div>
 
                     <div class="g-pos-rel g-pl-35">
-                      <i class="fa fa-comments g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary"></i>
+                      <i class="fab fa-linkedin-in g-absolute-centered--y g-left-0 g-font-size-20 g-color-primary"></i>
                       <span class="g-color-white-opacity-0_3">Toll free:</span>
-                      <strong>+48 555 1258 987</strong>
+                      <strong>CASE CONSULTING, INC.</strong>
                     </div>
+
                   </address> </div>
               </div>
             </div>
@@ -784,7 +791,7 @@
             <!-- Google (Map) [custom] -->
             <div class="g-pos-rel g-height-600">
               <div id="gMap" class="js-g-map g-pos-abs w-100 h-100" data-type="custom"
-                data-lat="40.674" data-lng="-73.946" data-zoom="12" data-title="Lawyers"
+                data-lat="39.1081556" data-lng="-77.6366307" data-zoom="12" data-title="Lawyers"
                 data-styles='[
                      ["", "", [{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]],
                      ["", "labels", [{"visibility":"on"}]],
