12-Bootstrap-4-up: Fixed about section column heights

--- a/Scrubbed_Unity/index.html
+++ b/Scrubbed_Unity/index.html
@@ -154,14 +154,16 @@
       <section id="about">
         <div class="container-fluid px-0">
           <!-- Info Blocks -->
-          <div class="align-items-stretch d-flex no-gutters">
+          <div class="row d-flex align-items-stretch no-gutters">
             <div class="col-md-4 g-parent g-bg-white">
               <!-- Article -->
-              <article class="d-flex flex-wrap text-center g-color-gray-dark-v3">
-                <div class="order-2 w-100"> <img class="w-100" src="./assets/custom/assets-case/img/sepia_desk.jpg"
+              <article class="d-flex flex-wrap text-center g-color-gray-dark-v3"
+                style="min-height: 100%">
+                <div class="order-2 w-100"> <img class="w-100 img-fluid" style="min-height: 100%" src="./assets/custom/assets-case/img/sepia_desk.jpg"
                     alt="Sepia Desk"> </div>
                 <!-- Arrows u-ns-bg-v1-bottom -->
-                <div id="work-that-matters" class="order-1 w-100  g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
+                <div id="work-that-matters" class="order-1 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md"
+                  style="min-height: 100%">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-mb-20"><strong>Work that Matters</strong></h3>
                   <p class="mb-0">Case Consulting is a software services company that supports the
                     mission critical requirements of the federal government and private
@@ -172,12 +174,13 @@
               </article>
               <!-- End Article -->
             </div>
-            <div class="col-md-4 g-parent g-theme-bg-gray-dark-v1 g-theme-bg-color-1">
+            <div class="col-md-4 g-parent g-theme-bg-gray-dark-v1">
               <!-- Article -->
-              <article class="d-flex flex-wrap text-center g-color-white">
-                <div class="order-1 w-100"> <img class="w-100" src="./assets/custom/assets-case/img/meeting-min.jpg"
+              <article class="d-flex flex-wrap text-center g-color-white" style="min-height: 100%">
+                <div class="order-1 w-100"> <img class="w-100 h-100" style="min-height: 100%" src="./assets/custom/assets-case/img/meeting-min.jpg"
                     alt="Meeting"> </div>
-                <div class="order-2 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
+                <div class="order-2 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md"
+                  style="min-height: 100%">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-color-white g-mb-20">Clients that care</h3>
                   <div class="u-heading-v2-2--top g-brd-primary"></div>
                   <p class="g-color-gray-light-v4 mb-0">We provide top-notch IT staff to Commercial and Federal Government
@@ -190,11 +193,14 @@
             </div>
             <div class="col-md-4 g-parent g-bg-white">
               <!-- Article -->
-              <article class="d-flex flex-wrap text-center g-color-gray-dark-v3">
-                <div class="order-2 w-100"> <img class="w-100" src="./assets/custom/assets-case/img/suit.jpg"
+              <article class="d-flex flex-wrap text-center g-color-gray-dark-v3"
+                style="
+                min-height: 100%">
+                <div class="order-2 w-100"> <img class="w-100 img-fluid" style="min-height: 100%" src="./assets/custom/assets-case/img/suit.jpg"
                     alt="Image description"> </div>
                 <div id="leaders-that-captivate"
-                  class="order-1 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md">
+                  class="order-1 w-100 g-z-index-1 g-py-50 g-py-100--md g-px-15 g-px-50--md"
+                  style="min-height: 100%">
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-mb-20"><strong>Leaders that captivate</strong></h3>
                   <p class="mb-0">Case Consulting has a well-earned reputation for quality, responsiveness
                     and absolute excellence. We take pride in our ability to fully
