--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <head>
     <!-- Title -->
-    <title>Case Consulting Website | Consult with Case</title>
+    <title>Case Consulting | Consult with Case</title>
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
