23-Contact-Hight/Title: fixed borders

--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
             <div class="col-md-4 g-parent g-bg-white">
               <!-- Article -->
               <article class="d-flex flex-wrap text-center g-color-gray-dark-v3"
-                style="
-                min-height: 100%">
+                style="min-height: 100%">
                 <div class="order-2 w-100"> <img class="w-100 img-fluid" style="min-height: 100%" src="./assets/custom/assets-case/img/suit.jpg"
                     alt="Image description"> </div>
                 <div id="leaders-that-captivate"
@@ -738,7 +737,7 @@
       <!-- Section Content -->
       <section id="contact" class="container-fluid g-color-white">
         <div class="row">
-          <div class="col-lg-6 d-flex align-items-center g-theme-bg-color-1 g-py-50 g-pa-15 g-pa-80--md">
+          <div class="col-lg-6 d-flex align-items-center g-theme-bg-color-1 g-py-50 g-pa-15 g-pa-30--md">
             <div class="w-100">
               <div class="row">
                 <div class="col-md-6 col-lg-12 g-mb-60 g-mb-0--md g-mb-60--lg">
