18-Intern-tab-Careers: Added Internship tab

--- a/index.html
+++ b/index.html
@@ -522,6 +522,13 @@
                    role="tab"
                    aria-controls="contact"
                    aria-selected="false">System Administrator</a> </li>
+              <li class="nav-item"> <a class="nav-link"
+                   id="internship-tab"
+                   data-toggle="tab"
+                   href="#internship"
+                   role="tab"
+                   aria-controls="contact"
+                   aria-selected="false">Internship</a> </li>
             </ul>
             <div class="tab-content"
                  id="myTabContent">
@@ -664,6 +671,30 @@
                       to determine proper server installation methods and procedures. May provide 24x7
                       operational support.
                     </p>
+                  </div>
+                </row>
+              </div>
+              <div class="tab-pane fade"
+                   id="internship"
+                   role="tabpanel"
+                   aria-labelledby="profile-tab">
+                <row>
+                  <div class="col-md-8 offset-md-2">
+                    <h3 class="text-uppercase g-color-white">
+                      <strong>Internship</strong>
+                    </h3> </div>
+                </row>
+                <row>
+                  <div class="col-md-8 offset-md-2">
+                    <p class="g-color-white"> Summer Internships take place from May to August in the Make Offices in Reston, Virginia,
+                      within the metropolitan area of Washington, D.C. The interns will design and implement
+                      software applications as part of a collaborative team of interns and professional
+                      software developers. The intern will gain experience in full stack development
+                      using modern web technologies, including Amazon Web Services (AWS). Interns will
+                      also learn best practices in version control systems using GitHub, and will incorporate
+                      Agile methodologies for self-organization and regular delivery of code for production.
+                      The intern will develop communication skills with customers to produce useful software
+                      for the client. </p>
                   </div>
                 </row>
               </div>
