22-link-color-on-hover: added link hover color to benefits section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <h3 class="text-uppercase g-line-height-1_1 g-font-weight-800 g-font-size-25 g-font-size-30--md g-color-white g-mb-20">Clients that care</h3>
                   <div class="u-heading-v2-2--top g-brd-primary"></div>
                   <p class="g-color-gray-light-v4 mb-0">We provide top-notch IT staff to Commercial and Federal Government customers with experience in delivering superior system engineering expertise, project management support, and application development and design via Agile methodologies.
-                    </p>
+                  </p>
                 </div>
               </article>
               <!-- End Article -->
@@ -168,7 +168,7 @@
         <div class="container text-center g-max-width-750 g-mb-70">
           <div class="u-heading-v2-2--bottom g-brd-primary g-mb-20">
             <h2 class="text-uppercase u-heading-v2__title g-font-weight-800 g-font-size-30 g-font-size-40--md">Benefits</h2> </div>
-          <p class="mb-0">Case Consulting recognizes that employees are its number one asset and therefore offers a salary and <a style="color: #e74c3c;" href="https://drive.google.com/file/d/0B1sDU0n_NM9NbUdtWFlxOEpydjQ/view?usp=sharing" target="_blank" rel="noopener"><strong>benefits package</strong></a>            that reflect this. </p>
+          <p class="mb-0">Case Consulting recognizes that employees are its number one asset and therefore offers a salary and <a href="https://drive.google.com/file/d/0B1sDU0n_NM9NbUdtWFlxOEpydjQ/view?usp=sharing" target="_blank" rel="noopener"><strong>benefits package</strong></a>            that reflect this. </p>
         </div>
         <div class="container">
           <!-- Icon Blocks -->
@@ -183,7 +183,7 @@
                   <h3 class="h5 text-uppercase g-font-weight-800">Retirement</h3>
                   <ul class="list-unstyled g-font-size-12 g-mb-30 g-mb-0--md">
                     <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
-                      <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/" class="g-color-primary">401k</a>, without the requirement of an employee contribution </p>
+                      <p class="list_elem"> Monthly contribution of 3% of your salary in your <a href="http://www.sharebuilder401k.com/">401k</a>, without the requirement of an employee contribution </p>
                     </li>
                     <li class="g-pos-rel g-pl-10 g-mb-15"> <i class="fas fa-angle-right bullet_top  g-left-0 g-font-size-16 g-color-primary"></i>
                       <p class="list_elem"> Annual lump-sum profit sharing of 10%, deposited at the end of each year </p>
