27-extraneous-font-awesome-files: removed icon-7 in revolution slider

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <link rel="stylesheet"
           href="./assets/vendor/slick-carousel/slick/slick.css">
     <!-- Revolution Slider -->
-    <link rel="stylesheet"
-          href="./assets/vendor/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+    <!--  <link rel="stylesheet"
+          href="./assets/vendor/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css"> -->
     <link rel="stylesheet"
           href="./assets/vendor/revolution-slider/revolution/css/settings.css">
     <link rel="stylesheet"
