--- a/index.html
+++ b/index.html
@@ -604,13 +604,13 @@
           </div>
         </div>
         <div class="text-center">
-          <a href="#collapseEvents" class="btn btn-primary btn-lg" data-toggle="collapse" aria-expanded="false" aria-controls="collapseEvents">
+          <a href="#collapseEvents" class="btn btn-primary btn-lg collapseButton" data-toggle="collapse" aria-expanded="false" aria-controls="collapseEvents">
 
           <span class="collapsed">
-          Show more
+            <i class="fas fa-chevron-down"></i>
           </span>
           <span class="expanded">
-          Show Less
+            <i class="fas fa-chevron-up"></i>
           </span>
 
           </a>
